# smart-alarm-clock

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.run/: Flash + monitor.run.xml  Flash TTGO T-Display.run.xml
docs/: architecture.md  handoff.md  toolchain.md
hardware/: README.md
homeassistant/: README.md
homeassistant/custom_components/smart_alarm_clock/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json  switch.py  time.py
software/: .gitignore
software/src/: main.rs  network.rs  state.rs
src/: alarm.rs  button.rs  display.rs  dns.rs  interaction.rs  led.rs  main.rs  mqtt.rs  net.rs  state.rs
