[package]
name = "smart-alarm-clock"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "smart-alarm-clock"
harness = false # do not use the built-in test harness on the device target

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
# Bare ESP-IDF startup/linkage. Add esp-idf-hal / esp-idf-svc back when the
# firmware grows past the entry-point scaffold.
esp-idf-sys = "0.37.2"

[build-dependencies]
embuild = { version = "0.33.1", features = ["espidf"] }
