[package]
name = "smart-alarm-clock"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "smart-alarm-clock"
harness = false # do not use the built-in test harness on the device target

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
# Aligned on the esp-idf-sys 0.36 / esp-idf-hal 0.45 generation so the WS2812
# RMT driver (which needs esp-idf-sys ^0.36) resolves without a `links` clash.
esp-idf-sys = "0.36"
esp-idf-hal = "0.45"
# Onboard WS2812 RGB LED (GPIO48) driven over the RMT peripheral.
ws2812-esp32-rmt-driver = { version = "0.13", features = ["smart-leds-trait"] }
smart-leds = "0.4" # RGB8 + hsv2rgb + SmartLedsWrite (rainbow)

[build-dependencies]
embuild = { version = "0.33.1", features = ["espidf"] }
